--- a/css/products.css
+++ b/css/products.css
@@ -594,7 +594,7 @@
   font-size: 0.6rem;
 }
 .all-products .goods-item .text .buy-btn {
-  font-size: 35px;
+  font-size: 1rem;
   align-self: center;
   color: #690d3f;
 }
