--- a/css/index正式版.css
+++ b/css/index正式版.css
@@ -236,6 +236,9 @@
   text-decoration: none;
   line-height: 55px;
 }
+.carousel {
+  margin-top: 65px;
+}
 @media (max-width: 576px) {
   .carousel .carousel-item {
     height: 200px;
@@ -295,7 +298,6 @@
   }
 }
 .carousel .carousel-item {
-  margin-top: 65px;
   position: relative;
   background-size: cover;
   background-repeat: no-repeat;
@@ -551,7 +553,7 @@
 }
 @media (max-width: 576px) {
   .filter .row .filter-item {
-    width: 70px;
+    width: 60px;
     line-height: 24px;
     font-size: 12px;
   }
